# text-editor

./: .gitignore  CMakeLists.txt  README.md  Readme.md  editor.cpp  gui.h
src/: app.cpp  app.h  editor.cpp  editor.h  gui.cpp  gui.h  main.cpp
src/Themes/: themes.cpp  themes.h
src/Welcome/: welcome_page.cpp  welcome_page.h
src/editor/: editor.cpp  editor.h
src/gui/: mainframe.cpp  mainframe.h
src/popups/: popups.cpp  popups.h
src/utils/: file_utils.cpp  file_utils.h
